[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/assets/sprites/character/ts_bot/TS_bot_sprite_agressive.svg" type="Texture" id=1]
[ext_resource path="res://source/assets/scripts/ts_bot_handlers/ts_bot_handlergd.gd" type="Script" id=2]
[ext_resource path="res://source/assets/sprites/character/ts_bot/TS_bot_sprite_passive.svg" type="Texture" id=3]
[ext_resource path="res://source/assets/sprites/character/ts_bot/TS_bot_sprite_friendly.svg" type="Texture" id=4]
[ext_resource path="res://source/assets/sprites/character/ts_bot/TS_bot_sprite_weapon_on.svg" type="Texture" id=5]
[ext_resource path="res://source/assets/sprites/character/ts_bot/TS_bot_sprite_weapon_off.svg" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 46.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "friendly_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "agressive_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "passive_idle",
"speed": 5.0
} ]

[node name="ts_bot" type="KinematicBody2D" groups=["bot"]]
script = ExtResource( 2 )

[node name="main_bot_collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="outer_bot_collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="ts_bot_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 3 )
animation = "passive_idle"

[node name="TsBotSpriteWeaponOff" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="TsBotSpriteWeaponOn" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
